# smallgwn

./: .clang-format  .clangd  .cmake-format.py  .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  TODO.md  imgui.ini  singular.md
.agent/: AGENTS.md
.codex/: AGENTS.md
apps/harnack_debug/: main.cu
apps/winding_studio/: CMakeLists.txt  main.cpp  voxel_grid_spec.hpp  voxelizer.cu  voxelizer.hpp  ws_app.cpp  ws_app.hpp  ws_cli.cpp  ws_cli.hpp  ws_core.cpp  ws_core.hpp  ws_math.hpp  ws_render.cpp  ws_render.hpp  ws_types.hpp  ws_ui.cpp  ws_ui.hpp
benchmarks/: CMakeLists.txt  benchmark_csv.hpp  benchmark_main.cu  benchmark_utils.hpp
docs/: HPLOC.tex  gwn_issues.md  harmonic.tex  harnack-blender.md  harnack.md  robust_tracing.md
docs/plans/: 2026-02-26-integration-light-heavy-width-index-matrix.md  2026-02-27-open-mesh-harnack-angle-tracer-fix.md
docs/superpowers/plans/: 2026-03-18-ias-implementation.md
docs/superpowers/specs/: 2026-03-18-ias-design.md  2026-07-08-refit-pipeline-design.md
examples/harnack_debug/: CMakeLists.txt  GetCPM.cmake  main.cu
examples/winding_studio/: CMakeLists.txt  harnack_tracer.cu  harnack_tracer.hpp  imgui.ini  main.cpp  mesh_loader.hpp  studio_activation.cpp  studio_activation.hpp  studio_app.cpp  studio_app.hpp  studio_cli.cpp  studio_cli.hpp  studio_domain.hpp  studio_math.hpp  studio_mesh_library.cpp  studio_mesh_library.hpp  studio_mesh_validate.cpp  studio_mesh_validate.hpp  studio_render.cpp  studio_render.hpp  studio_state.hpp  studio_trace.cpp  studio_trace.hpp  studio_ui.cpp  studio_ui.hpp  studio_voxel.cpp  studio_voxel.hpp  voxelizer.cu  voxelizer.hpp
examples/winding_studio/e2e/: README.md  run.sh  run_ci.sh
examples/winding_studio/e2e/artifacts/: .gitignore
examples/winding_studio/e2e/visual/: smoke_modes.sh
examples/winding_studio/tests/: test_mesh_library.cpp  test_mesh_validate.cpp  ui_contract_runner.cpp  ui_contract_tests.cpp  ui_contract_tests.hpp
include/: texture_fetch_functions.h
include/gwn/: gwn.cuh  gwn_assert.cuh  gwn_boundary.cuh  gwn_bvh.cuh  gwn_bvh_build.cuh  gwn_bvh_facade.cuh  gwn_bvh_refit.cuh  gwn_bvh_topology_build.cuh  gwn_eigen_bridge.cuh  gwn_eigen_bridge.hpp  gwn_geometry.cuh  gwn_kernel_utils.cuh  gwn_query.cuh  gwn_scene.cuh  gwn_utils.cuh  gwn_utils.hpp  gwn_winding_number.cuh
include/gwn/detail/: gwn_boundary_impl.cuh  gwn_bvh_build_binary.cuh  gwn_bvh_build_collapse.cuh  gwn_bvh_build_common.cuh  gwn_bvh_build_hploc.cuh  gwn_bvh_build_impl.cuh  gwn_bvh_build_lbvh.cuh  gwn_bvh_build_taylor_async.cuh  gwn_bvh_build_taylor_levelwise.cuh  gwn_bvh_build_topology.cuh  gwn_bvh_pipeline_aabb.cuh  gwn_bvh_pipeline_moment.cuh  gwn_bvh_pipeline_orchestrator.cuh  gwn_bvh_pipeline_topology.cuh  gwn_bvh_refit_aabb_impl.cuh  gwn_bvh_refit_async.cuh  gwn_bvh_refit_common.cuh  gwn_bvh_refit_impl.cuh  gwn_bvh_refit_moment_impl.cuh  gwn_bvh_reorder.cuh  gwn_bvh_revision.cuh  gwn_bvh_status_helpers.cuh  gwn_bvh_topology_build_binary.cuh  gwn_bvh_topology_build_collapse.cuh  gwn_bvh_topology_build_common.cuh  gwn_bvh_topology_build_hploc.cuh  gwn_bvh_topology_build_impl.cuh  gwn_bvh_topology_build_lbvh.cuh  gwn_bvh_topology_reorder_bfs.cuh  gwn_bvh_triangle_impl.cuh  gwn_device_array.cuh  gwn_geometry_impl.cuh  gwn_harnack_trace_impl.cuh  gwn_kernel_utils.cuh  gwn_query_common_impl.cuh  gwn_query_distance_impl.cuh  gwn_query_geometry_impl.cuh  gwn_query_gradient_impl.cuh  gwn_query_hybrid_impl.cuh  gwn_query_ray_impl.cuh  (+10 more)
tests/: CMakeLists.txt  benchmark_csv.cuh  benchmark_cubql.cu  benchmark_main.cu  benchmark_utils.cuh  bvh_model_parity.cu  e2e_gwn.cu  gwn_correctness_models.cu  integration_antipodal_models.cu  integration_builtin_models.cu  integration_correctness.cu  integration_gradient.cu  integration_gwn_builder.cu  integration_gwn_dynamic.cu  integration_gwn_static.cu  integration_harnack_behavior_match.cu  integration_harnack_iteration_stats.cu  integration_harnack_trace.cu  integration_hploc_performance.cu  integration_model_parity.cu  integration_taylor_matrix.cu  libigl_reference.cpp  libigl_reference.hpp  parity_scaffold.cu  reference_cpu.cuh  reference_cpu.hpp  reference_hdk.cuh  refit_fidelity_laplacian.cpp  refit_fidelity_laplacian.hpp  refit_fidelity_main.cu  run_cubql_comparison.sh  smoke_compile.cu  test_fixtures.cuh  test_fixtures.hpp  test_harnack_meshes.hpp  test_mesh_io.cpp  test_mesh_io.hpp  test_mesh_main.cpp  test_meshes.hpp  test_utils.cuh  (+38 more)
tests/data/: closed_cube.ply  nonplanar_closed.ply  open_cube.ply
tests/reference_hdk/: LICENSE-SIDEFX.txt
